sao: Fix widget / icons / buttons alignment in theme [CUSTOM]
Fix PCLAS-425

--- a/sao/theme/coog/elements/inputs.less
+++ b/sao/theme/coog/elements/inputs.less
@@ -36,7 +36,7 @@
 
 .input-group-sm>.form-control, .input-group-sm>.input-group-addon {
     font-size:          @input-font-size;
-    height:             2em;
+    height:             33px;
 }
 .input-group-sm>.input-group-btn>.btn {
     font-size:          @input-btn-size!important;
